syntax= "proto3";
option java_multiple_files= true;
option java_package= 'com.icemelon404.community.social.proto';


message FollowStatus {
  bool isFollowing = 1;
}

message FollowInfo {
  int64 follower = 1;
  int64 followee = 2;
}


service FollowCheckService {
  rpc checkFollow(FollowInfo) returns (FollowStatus);
}
